--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-157.6KB/s(Youtube:不良林), server: 194.124.35.23, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇦 加拿大-3.88MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-360.6KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 1a1247ea6cb266b4, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇸🇬 新加坡-2.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
+  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.22MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
