--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇸🇬 新加坡-2.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
-  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-3.22MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 捷克-1.27MB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 104.243.25.95, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
+  - {name: 🇸🇬 新加坡-310.9KB/s(Youtube:不良林), server: 194.124.35.23, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-761.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.81MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-394.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.22MB/s(Youtube:不良林)
+      - 捷克-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
