--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.98MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-761.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 未知国家-376.7KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 柬埔寨-1.92MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 未知国家-1.77MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.23MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇨🇳 中国-6.68MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇸🇬 新加坡-2.05MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-376.7KB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 未知国家-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
