--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 未知国家-1.77MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
   - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.23MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-6.68MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-2.05MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-342.6KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇸🇬 新加坡-3.52MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 捷克-616.4KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 未知国家-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.23MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
+      - 捷克-616.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
